--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
       <div class="skill-row">
         <img class="linux" src="images/linux.png" alt="picture of linux">
         <h3>Linux</h3>
-        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        <p>I love working with linux. and I used linux for  most of the time </p>
       </div>
       <div class="skill-row">
         <img class="python" src="images/python.png" alt="picture of python logo">
         <h3>python</h3>
-        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        <p>I am a python programmer. I love working with python because it simple and powerful.</p>
       </div>
       <div class="skill-row">
         <img class="electronics" src="images/circuit.png" alt="picture of circuit">
         <h3>Electronics</h3>
-        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        <p>Iam an Electronics engineers and love working with electronics components .</p>
       </div>
       <div class="skill-row">
         <img class="cpp" src="images/cpp.png" alt="picture of c++ logo">
         <h3>C/C++</h3>
-        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        <p> I love programming in c/c++. as an electronics engineer and embedded software developer most of the i programmed in c/c++ </p>
       </div>
     </div>
     <hr>
