The intro is changed

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="profile">
       <img class="me" src="images/amal.jpg" alt="picture of Amalkrishna">
       <h2>Hello.</h2>
-      <p class="intro">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+      <p class="intro">I am an electronics and Instumentation Engineer and a software developer.</p>
     </div>
     <hr>
     <div class="skills">
