add contact info

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-      <p class="contact">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-      <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+      <h3>If you have any question.</h3>
+      <p class="contact">You can contct me through Email for that just click the below button.</p>
+      <a class="btn" href="mailto:amalkrishnaur601@gmail.com">CONTACT ME</a>
     </div>
   </div>
 
